--- a/Configs/.config/hypr/hyprland/exec.conf
+++ b/Configs/.config/hypr/hyprland/exec.conf
@@ -4,10 +4,10 @@ exec-once = waybar
 exec-once = swww-daemon
 exec-once = swaync
 exec-once = hypridle
-exec = pywalfox update
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = pywalfox update
+exec-once = $HOME/.local/bin/swww-init.sh
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # Appearance
 exec-once = hyprctl setcursor Sweet-cursors 20
-
 exec-once = wl-clip-persist --clipboard primary
 
