--- a/Configs/.config/hypr/hyprland/env.conf
+++ b/Configs/.config/hypr/hyprland/env.conf
@@ -9,6 +9,7 @@ $scrDir=$HOME/.local/bin
 # ENVIRONMENT
 # ─────────────────────────────────────
 env = TERMINAL,kitty -l
+env = EDITOR,nvim
 env = MOZ_ENABLE_WAYLAND,1
 
 env = QT_QPA_PLATFORMTHEME,qt6ct
