--- a/Configs/.config/hypr/hyprland/exec.conf
+++ b/Configs/.config/hypr/hyprland/exec.conf
@@ -10,8 +10,15 @@ exec-once = ~/.local/bin/swww-cache.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # ─────────────────────────────────────
+# CLIPBOARD-MANAGER
+# ─────────────────────────────────────
+exec-once = wl-paste --type text --watch cliphist store
+exec-once = wl-paste --type image --watch cliphist store
+
+# ─────────────────────────────────────
 # APPEARANCE
 # ─────────────────────────────────────
 exec-once = hyprctl setcursor Sweet-cursors 20
 exec-once = wl-clip-persist --clipboard primary
+
 
