--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -17,6 +17,7 @@ bind = Ctrl+Shift, Escape, exec, gnome-system-monitor #TaskManager
 # Rofi Keybindings:
 bind = $mainMod, D, exec, $menu #Toggle Rofi Menu
 bind = $mainMod+Shift, D, exec, $select-menu #Toggle Rofi Selection menu
+bind = $mainMod+Alt, V, exec, $scrDir/wl-clipmanager.sh #Toggle Clipboard Manager (cliphist)
 
 # Waybar Keybindings:
 bind = $mainMod+Ctrl, R, exec, $toggle-bar #Waybar Reload
