--- a/Configs/.config/waybar/Styles/Configs/[BOT] HyDE.jsonc
+++ b/Configs/.config/waybar/Styles/Configs/[BOT] HyDE.jsonc
@@ -17,7 +17,7 @@
 
 	"modules-left": ["custom/l_end","custom/power","custom/cliphist","custom/wbar","custom/wallchange","custom/r_end","custom/l_end","wlr/taskbar","custom/r_end","custom/padd"],
 	"modules-center": ["custom/l_end","hyprland/workspaces","idle_inhibitor","clock","custom/r_end"],
-	"modules-right": ["custom/l_end","tray","battery","backlight","network","pulseaudio","pulseaudio#microphone","custom/r_end"],
+	"modules-right": ["custom/l_end","tray","custom/battery","backlight","network","pulseaudio","pulseaudio#microphone","custom/r_end"],
 
 
 // sourced from modules based on config.ctl //
@@ -127,7 +127,7 @@
         "spacing": 5
     },
 
-    "battery": {
+    "custom/battery": {
         "exec": "$HOME/.config/hypr/scripts/battery.sh &",
         "interval": 2,
         "format": "{}",
