--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -10,9 +10,14 @@ bind = $mainMod, K, exec, $hyprscrDir/tile-terminal.sh $terminal
 bind = $mainMod, E, exec, $fileManager # Dolphin File Manager
 bind = $mainMod, W, exec, firefox # Toggle Browser
 bind = $mainMod, P, exec, kitty fish -li -c "mpc update & ncmpcpp" #Toggle Music Player Daemon
-bind = $mainMod, Print, exec, grim -g "$(slurp)" #Toggle Screenshot Menu
 bind = $mainMod, C, exec, vscodium # Toggle VSCodium
 bind = Ctrl+Shift, Escape, exec, gnome-system-monitor #TaskManager
+
+
+# Screenshot-Bindings:
+bind = $mainMod, Print, exec, $scrDir/wl-screenshot.sh --now
+bind = $mainMod+Shift, Print, exec, $scrDir/wl-screenshot.sh --area
+bind = ALT, Print, exec, $scrDir/wl-screenshot.sh --active
 
 # Rofi Keybindings:
 bind = $mainMod, D, exec, $menu #Toggle Rofi Menu
