--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -13,28 +13,24 @@ bind = $mainMod, P, exec, kitty fish -li -c "mpc update & ncmpcpp" #Toggle Music
 bind = $mainMod, C, exec, vscodium # Toggle VSCodium
 bind = Ctrl+Shift, Escape, exec, gnome-system-monitor #TaskManager
 
+# Rofi Keybindings:
+bind = $mainMod, D, exec, pkill -x rofi || $menu #Toggle Rofi Menu
+bind = $mainMod+Shift, D, exec, pkill -x rofi || $select-menu #Toggle Rofi Selection menu
+bind = $mainMod, V, exec, pkill -x rofi || $scrDir/wl-clipmanager.sh
+bind = $mainMod+Ctrl, R, exec, $toggle-bar #Waybar Reload
+bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrDir/WaybarLayout.sh #Toggle Waybar Layout
+bind = $mainMod+Alt, W, exec, pkill -x rofi || $scrDir/WaybarStyle.sh #Toggle Waybar Style
+bind = $mainMod, T, exec, pkill -x rofi || $select-wallpapermenu #Toggle Wallpaper Menu
+bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
+bind = $mainMod+Alt, S, exec, pkill -x rofi || $scrDir/sddm-style.sh #Toggle SDDM Style
+
+# Swaync-Bindings:
+bind = $mainMod, N, exec, swaync-client -t -sw #Toggle Swaync Notication bar
 
 # Screenshot-Bindings:
 bind = $mainMod, Print, exec, $scrDir/wl-screenshot.sh --now
 bind = $mainMod+Shift, Print, exec, $scrDir/wl-screenshot.sh --area
 bind = ALT, Print, exec, $scrDir/wl-screenshot.sh --active
-
-# Rofi Keybindings:
-bind = $mainMod, D, exec, $menu #Toggle Rofi Menu
-bind = $mainMod+Shift, D, exec, $select-menu #Toggle Rofi Selection menu
-bind = $mainMod+Alt, V, exec, $scrDir/wl-clipmanager.sh #Toggle Clipboard Manager (cliphist)
-
-# Waybar Keybindings:
-bind = $mainMod+Ctrl, R, exec, $toggle-bar #Waybar Reload
-bind = $mainMod+Shift, W, exec, $scrDir/WaybarLayout.sh #Toggle Waybar Layout
-bind = $mainMod+Alt, W, exec, $scrDir/WaybarStyle.sh #Toggle Waybar Style
-
-# Wallpaper Keybinding
-bind = $mainMod, T, exec, $select-wallpapermenu #Toggle Wallpaper Menu
-bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
-
-# Swaync-Bindings:
-bind = $mainMod, N, exec, swaync-client -t -sw #Toggle Swaync Notication bar
 
 # Power Bindings:
 bind = Ctrl+Alt, Delete, exec, $wlogout-menu #Toggle Power Menu
