--- a/Configs/.config/hypr/hyprland/define-app.conf
+++ b/Configs/.config/hypr/hyprland/define-app.conf
@@ -7,7 +7,7 @@ $menu = rofi -show drun
 $select-menu = $scrDir/style-launcher.sh
 $toggle-bar = $hyprscrDir/toggle-waybar.sh
 $select-wallpapermenu = $scrDir/wbselecgen.sh
-$random-wallpaper = $scrDir/wbsecrandom.sh
+$random-wallpaper = $scrDir/wbsecrandom.sh -r
 $wlogout-menu = $hyprscrDir/Wlogout.sh
 $d=[$ws]
 
