--- a/Configs/.config/waybar/Styles/Configs/[BOT] HyDE.jsonc
+++ b/Configs/.config/waybar/Styles/Configs/[BOT] HyDE.jsonc
@@ -54,8 +54,9 @@
         "format": "\udb80\udd8a {0}",
         "rotate": 0,
         "exec": "echo ; echo 󰆊 switch wallpaper",
-        "on-click-right": "$HOME/.local/bin/wbselecgen.sh &",
-        "on-click": "$HOME/.local/bin/wbsecrandom.sh &",
+        "on-click-right": "$HOME/.local/bin/wbsecrandom.sh -p &",
+		"on-click-middle": "$HOME/.local/bin/wbsecrandom.sh -r &",
+        "on-click": "$HOME/.local/bin/wbsecrandom.sh -n &",
         "interval" : 86400, // once every day
         "tooltip": true
     },
