--- a/Configs/.config/hypr/hyprland/rules.conf
+++ b/Configs/.config/hypr/hyprland/rules.conf
@@ -25,7 +25,6 @@ windowrule = pin true,             match:tag picture-in-picture
 # ─────────────────────────────────────
 # WORKAROUND
 # ─────────────────────────────────────
-
 windowrule = opacity 0.90 $& 0.90 $& 1, match:class ^(firefox)$
 windowrule = opacity 0.90 $& 0.90 $& 1, match:class ^(brave-browser)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(code-oss)$
@@ -33,7 +32,7 @@ windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^([Cc]ode)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(code-url-handler)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(code-insiders-url-handler)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(kitty)$
-windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(org.kde.dolphin)$
+windowrule = opacity 0.75 $& 0.75 $& 1, match:class ^(org.kde.dolphin)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(org.kde.ark)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(nwg-look)$
 windowrule = opacity 0.80 $& 0.80 $& 1, match:class ^(qt5ct)$
@@ -57,13 +56,59 @@ windowrule = opacity 0.90 0.90, match:class ^(com.github.rafostar.Clapper)$ # Cl
 windowrule = opacity 0.80 0.80, match:class ^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
 windowrule = opacity 0.80 0.80, match:class ^(hu.kramo.Cartridges)$ # Cartridges-Gtk
 windowrule = opacity 0.80 0.80, match:class ^(com.obsproject.Studio)$ # Obs-Qt
-windowrule = opacity 0.80 0.80, match:class ^(vesktop)$ # Vesktop
+#windowrule = opacity 0.80 0.80, match:class ^(vesktop)$ # Vesktop
 windowrule = opacity 0.80 0.80, match:class ^(discord)$ # Discord-Electron
 windowrule = opacity 0.80 0.80, match:class ^(WebCord)$ # WebCord-Electron
 windowrule = opacity 0.80 0.80, match:class ^(ArmCord)$ # ArmCord-Electron
 windowrule = float on, match:class ^(eog)$ # Imageviewer-Gtk
 windowrule = float on, match:class ^(io.github.alainm23.planify)$ # planify-Gtk
 windowrule = no_initial_focus on, match:class ^(.*jetbrains.*)$, match:title ^(win[0-9]+)$
+
+windowrule = float true, match:tag hyde_floating_apps
+windowrule = float true, center true, match:tag hyde_common_popups
+windowrule = float true, center true, match:tag hyde_portal_dialogs
+windowrule = match:float true, match:class hyde_floating_apps
+windowrule = float true,match:tag portal-dialogs
+windowrule = center on,match:tag portal-dialogs
+windowrule = match:initial_title ^(Open File|Volume Control|Save As.*)$, tag +hyde_common_popups
+windowrule = match:class ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$, tag +hyde_common_popups
+
+windowrule {
+    name = hyde_floating_apps
+    tag = +hyde_floating_apps
+    match:class = ^(blueman-manager|pavucontrol-qt|com\.gabm\.satty|vlc|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1|console-dropdown)$
+}
+
+windowrule {
+    name = hyde_dolphin_popups
+    tag = +hyde_floating_apps
+    match:class = ^(org\.kde\.dolphin)$
+    match:title = ^(Progress Dialog — Dolphin|Copying — Dolphin)$
+}
+
+windowrule {
+    name = hyde_common_popups
+    tag = +hyde_common_popups
+    match:title = ^(Choose Files|Save As|Confirm to replace files|File Operation Progress|Open|Authentication Required|Add Folder to Workspace|File Upload.*|Choose wallpaper.*|Library.*|.*dialog.*)$
+}
+
+windowrule {
+    name = hyde_portal_dialogs
+    tag = +hyde_portal_dialogs
+    match:class = ^(org\.freedesktop\.impl\.portal\.desktop\.(hyprland|gtk)|[Xx]dg-desktop-portal-gtk)$
+}
+
+windowrule {
+    name = hyde_picture_in_picture
+    match:title = ^([Pp]icture[-\s]?[Ii]n[-\s]?[Pp]icture)(.*)$
+    tag = +picture-in-picture
+    tag = +hyde_picture_in_picture
+    float = true
+    keep_aspect_ratio = true
+    move = (monitor_w*0.73) (monitor_h*0.72)
+    size = (monitor_w*0.25) (monitor_h*0.25)
+    pin = true
+}
 
 # ─────────────────────────────────────
 # LAYERRULE
@@ -73,4 +118,19 @@ layerrule = blur on, ignore_alpha 0, match:namespace notifications
 layerrule = blur on, ignore_alpha 0.5, match:namespace swaync-control-center
 layerrule = blur on, ignore_alpha 0.5, match:namespace swaync-notification-window
 layerrule = blur on, ignore_alpha 0, match:namespace logout_dialog
-layerrule = blur on, ignore_alpha 0, match:namespace waybar
+layerrule = blur on, match:namespace waybar
+layerrule = no_anim true,match:namespace selection
+
+layerrule {
+    name = hyde_layer_blur
+    match:namespace = ^(rofi|notifications|swaync-(notification-window|control-center)|waybar|logout_dialog)$
+    blur = true
+}
+
+layerrule {
+    name = hyde_layer_ignore_alpha
+    match:namespace = ^(rofi|notifications|swaync-(notification-window|control-center)|logout_dialog|waybar|selection)$
+    ignore_alpha = true
+}
+
+
