--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -23,7 +23,7 @@ bind = $mainMod+Alt, W, exec, pkill -x rofi || $scrDir/WaybarStyle.sh #Toggle Wa
 bind = $mainMod, T, exec, pkill -x rofi || $select-wallpapermenu #Toggle Wallpaper Menu
 bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
 bind = $mainMod+Alt, S, exec, pkill -x rofi || $scrDir/sddm-style.sh #Toggle SDDM Style
-
+bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrDir/lumine-switch.sh # Toggle IvyShell Colors
 # Swaync-Bindings:
 bind = $mainMod, N, exec, swaync-client -t -sw #Toggle Swaync Notication bar
 
