IDE-Swwwcache.sh

--- a/Configs/.config/hypr/hyprland/exec.conf
+++ b/Configs/.config/hypr/hyprland/exec.conf
@@ -6,7 +6,7 @@ exec-once = swww-daemon
 exec-once = swaync
 exec-once = hypridle
 exec-once = pywalfox update
-exec-once = ~/.local/bin/swww-cache.sh
+exec-once = ~/.local/bin/exec-start.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # ─────────────────────────────────────
