--- a/Configs/.config/waybar/Styles/Configs/[BOT] HyDE-01.jsonc
+++ b/Configs/.config/waybar/Styles/Configs/[BOT] HyDE-01.jsonc
@@ -168,7 +168,8 @@
 
     "tray": {
         "rotate": 0,
-        "spacing": 5
+        "spacing": 5,
+        "icon-size": 13
     },
 
     "custom/battery": {
