--- a/Configs/.config/waybar/Styles/Configs/[BOT] HyDE-05.jsonc
+++ b/Configs/.config/waybar/Styles/Configs/[BOT] HyDE-05.jsonc
@@ -188,7 +188,8 @@
 
     "tray": {
         "rotate": 0,
-        "spacing": 5
+        "spacing": 5,
+        "icon-size": 13
     },
 
     "custom/battery": {
