--- a/Configs/.config/waybar/Styles/Configs/[TOP] HyDE-02.jsonc
+++ b/Configs/.config/waybar/Styles/Configs/[TOP] HyDE-02.jsonc
@@ -17,7 +17,7 @@
 
 	"modules-left": ["custom/l_end","hyprland/workspaces","custom/r_end","custom/l_end","idle_inhibitor","clock","custom/r_end","custom/padd"],
 	"modules-center": ["custom/l_end","cpu","memory","backlight","custom/r_end"],
-	"modules-right": ["custom/l_end","pulseaudio","pulseaudio#microphone","custom/r_end","custom/l_end","network","custom/battery","power-profiles-daemon","custom/r_end","custom/padd","custom/l_end","wlr/taskbar","custom/wallchange","custom/wbar","custom/cliphist","custom/power","custom/r_end"],
+	"modules-right": ["custom/l_end","pulseaudio","pulseaudio#microphone","custom/r_end","custom/l_end","network","custom/battery","power-profiles-daemon","custom/r_end","custom/l_end","wlr/taskbar","custom/wallchange","custom/wbar","custom/cliphist","custom/power","custom/r_end"],
 
 
 // sourced from modules based on config.ctl //
@@ -188,7 +188,8 @@
 
     "tray": {
         "rotate": 0,
-        "spacing": 5
+        "spacing": 5,
+        "icon-size": 13
     },
 
     "custom/battery": {
