--- a/Configs/.config/hypr/hyprland/decorations.conf
+++ b/Configs/.config/hypr/hyprland/decorations.conf
@@ -29,7 +29,7 @@ general {
 # ─────────────────────────────────────
 decoration {
 	rounding = 10  
-	active_opacity = 0.75
+	active_opacity = 0.90
 	inactive_opacity = 0.75
 	fullscreen_opacity = 1
 	dim_strength = 0.1
@@ -45,7 +45,7 @@ decoration {
 	blur {
 		enabled = true
 		xray = false 
-    special = false
+    special = true
     new_optimizations = true 
     size = 3
     passes = 4 
@@ -77,7 +77,7 @@ master {
 misc {
 	disable_hyprland_logo = true
 	disable_splash_rendering = true
-	vfr = 1
+	vfr = false
 	vrr = 0
 	mouse_move_enables_dpms = true
 	key_press_enables_dpms = true
@@ -86,6 +86,19 @@ misc {
 	enable_swallow = false
 	swallow_regex = (kitty)
 	focus_on_activate = true
+	on_focus_under_fullscreen = 1
+	force_default_wallpaper = 0
+	anr_missed_pings = 5
+	allow_session_lock_restore = true
+}
+
+
+# ─────────────────────────────────────
+# XWAYLAND
+# ─────────────────────────────────────
+
+xwayland {
+	force_zero_scaling = true
 }
 
 # ─────────────────────────────────────
