--- a/Configs/.config/hypr/hyprland/decorations.conf
+++ b/Configs/.config/hypr/hyprland/decorations.conf
@@ -4,6 +4,20 @@
 source = ./decorations/ivy.conf
 
 # ─────────────────────────────────────
+# EXEC
+# ─────────────────────────────────────
+
+$GTK_THEME=adw-gtk3-dark
+$ICON_THEME=Tela-Circle-Dracula
+$COLOR_SCHEME=prefer-dark
+$FONT=JetBrainsMono Nerd Font Bold 
+
+exec = gsettings set org.gnome.desktop.interface icon-theme '$ICON_THEME'
+exec = gsettings set org.gnome.desktop.interface gtk-theme '$GTK_THEME'
+exec = gsettings set org.gnome.desktop.interface color-scheme '$COLOR_SCHEME'
+exec = gsettings set org.gnome.desktop.interface font-name '$FONT 11'
+
+# ─────────────────────────────────────
 # GENERAL
 # ─────────────────────────────────────
 general {
