--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -47,6 +47,6 @@ fetchIcon="null"
 
 #// Exclusion, add exclusion to a variable that needs to be unset. Avoids conflicting variable and secures purity of globalcontrol.sh.
 #// Makes the variable local only for ide.conf.
-#// add 'exclusion="(example1|example2|example3)"' to unset the variable. 
-#// Do not let exclusion be defined like this: 'exclusion="()"'. This will unload all the variable and immediately fail!
-#exclusion="()"
+#// add the exclusions to unset the variable. 
+#// Do not let exclusion be defined empty. This will unload all the variable and immediately fail!
+#exclusion="(fetchIcon)"
