--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -3,7 +3,7 @@
 #|/ /--+-------------------------+/ /--|#
 
 #// wallSet; indicates the current-wallpaper is in use. DO NOT UPDATE THIS MANUALLY!
-wallSet="/home/iris/Pictures/wallpapers/1_rain_world.png"
+wallSet="/home/iris/Pictures/wallpapers/arcade_decay_red.png"
 
 #// set the transition FPS while changing wallpaper.
 wallFramerate=60
@@ -12,7 +12,7 @@ wallFramerate=60
 wallTransDuration=0.4
 
 #// set animations for swww. Previous, Next, Default
-wallAnimation="any"
+wallAnimation="grow"
 wallAnimationPrevious="outer"
 wallAnimationNext="grow"
 
@@ -35,18 +35,19 @@ rofiFontScale=10
 wallDir="${XDG_HOME_DIR:-$HOME}/Pictures/wallpapers/"
 
 #// fetchIconDir, sets the user directories scanned for finding fastfetch icons and randomizes. Default is to $XDG_CONFIG_HOME/fastfetch/icons!
-#// Before using fetchIconDir, be sure to set fetchIcon to "null".
-#// If fetchIcon and fetchIconDir is both set to null. Then fetchIcon would overwrite
+#// Before using fetchIconDir, be sure to set fetchIcon to empty.
+#// To empty fetchIcon, use the exclusion variable provided below to unset.
 #// and fetchIconDir would default to $XDG_CONFIG_HOME/fastfetch/icons.
 fetchIconDir="${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/icons"
 
-#// fetchIcon, sets the icon specified by the user! Needed paths to force icon! Default is t0 none.
-#// Before using fetchIcon, be sure to set fetchIconDir to "null".
-#// If both are set to null, then fetchIcon would overwrite!
-fetchIcon="null"
+#// fetchIcon, sets the icon specified by the user! Needed paths to force icon! Default is to none.
+#// Before using fetchIcon, be sure to set fetchIconDir empty..
+#// To empty out fetchIcon and exclusion it. Use exclusion variable provided below.
+fetchIcon=""
 
 #// Exclusion, add exclusion to a variable that needs to be unset. Avoids conflicting variable and secures purity of globalcontrol.sh.
 #// Makes the variable local only for ide.conf.
 #// add the exclusions to unset the variable. 
 #// Do not let exclusion be defined empty. This will unload all the variable and immediately fail!
-#exclusion="(fetchIcon)"
+#// If an exclusion is declared, it would still be set to empty.
+#exclusion="()"
