--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -3,7 +3,8 @@
 #|/ /--+-------------------------+/ /--|#
 
 #// wallSet; indicates the current-wallpaper is in use. DO NOT UPDATE THIS MANUALLY!
-wallSet="/home/iris/Pictures/wallpapers/arcade_decay_red.png"
+#// Well you can. :)
+wallSet="/home/iris/Pictures/wallpapers/1_rain_world.png"
 
 #// set the transition FPS while changing wallpaper.
 wallFramerate=60
@@ -11,16 +12,19 @@ wallFramerate=60
 #// set the transition duration for swww while changing wallpaper. 
 wallTransDuration=0.4
 
-#// set animations for swww. Previous, Next, Default
-wallAnimation="grow"
+# set animation for swww while changing wallpaper.
+wallAnimation="any"
 wallAnimationPrevious="outer"
 wallAnimationNext="grow"
+
+# set transition-bezier for swww while changing wallpaper.
+wallTransitionBezier=".43,1.19,1,.4"
 
 #// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
 #// ebableWallIde=0, 0 applies the colors determined from wallpaper.
 #// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
 #// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
-enableWallIde=0
+enableWallIde=1
 
 #// rofiScale, set the scale for rofi. 
 #// Default scalling value is int 10.
@@ -51,3 +55,4 @@ fetchIcon=""
 #// Do not let exclusion be defined empty. This will unload all the variable and immediately fail!
 #// If an exclusion is declared, it would still be set to empty.
 #exclusion="()"
+
