--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -21,7 +21,7 @@ wallAnimationNext="grow"
 wallTransitionBezier=".43,1.19,1,.4"
 
 #// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
-#// ebableWallIde=0, 0 applies the colors determined from wallpaper.
+#// enableWallIde=0, 0 applies the colors determined from wallpaper.
 #// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
 #// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
 enableWallIde=1
