My depression: Theme

--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -37,3 +37,10 @@ source = ./hyprland/keybinds.conf
 # WINDOW-RULES
 # ────────────────────────────────────────────────
 source = ./hyprland/rules.conf
+
+# ────────────────────────────────────────────────
+# THEMES
+# ────────────────────────────────────────────────
+source = ./themes/theme.conf
+source = ./themes/wallbash-ide.conf
+source = ./themes/Variable.conf
