--- a/Configs/.config/hypr/hyprland/exec.conf
+++ b/Configs/.config/hypr/hyprland/exec.conf
@@ -8,6 +8,7 @@ exec-once = hypridle
 exec-once = pywalfox update
 exec-once = ~/.local/bin/exec-start.sh
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = udiskie -t
 
 # ─────────────────────────────────────
 # CLIPBOARD-MANAGER
@@ -20,5 +21,4 @@ exec-once = wl-paste --type image --watch cliphist store
 # ─────────────────────────────────────
 exec-once = hyprctl setcursor Sweet-cursors 20
 exec-once = wl-clip-persist --clipboard primary
-
 
