--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -22,7 +22,8 @@ bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrDir/WaybarLayout.sh #Toggle
 bind = $mainMod, T, exec, pkill -x rofi || $select-wallpapermenu #Toggle Wallpaper Menu
 bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
 bind = $mainMod+Alt, S, exec, pkill -x rofi || $scrDir/sddm-style.sh #Toggle SDDM Style
-bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrDir/lumine-switch.sh # Toggle IvyShell Colors
+bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrDir/lumine-switch.sh
+bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrDir/theme-switch.sh
 # Swaync-Bindings:
 bind = $mainMod, N, exec, swaync-client -t -sw #Toggle Swaync Notication bar
 
