--- a/Configs/.config/hypr/hyprland/rules.conf
+++ b/Configs/.config/hypr/hyprland/rules.conf
@@ -56,7 +56,6 @@ windowrule = opacity 0.90 0.90, match:class ^(com.github.rafostar.Clapper)$ # Cl
 windowrule = opacity 0.80 0.80, match:class ^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
 windowrule = opacity 0.80 0.80, match:class ^(hu.kramo.Cartridges)$ # Cartridges-Gtk
 windowrule = opacity 0.80 0.80, match:class ^(com.obsproject.Studio)$ # Obs-Qt
-#windowrule = opacity 0.80 0.80, match:class ^(vesktop)$ # Vesktop
 windowrule = opacity 0.80 0.80, match:class ^(discord)$ # Discord-Electron
 windowrule = opacity 0.80 0.80, match:class ^(WebCord)$ # WebCord-Electron
 windowrule = opacity 0.80 0.80, match:class ^(ArmCord)$ # ArmCord-Electron
@@ -76,7 +75,7 @@ windowrule = match:class ^(.*dialog.*|[Xx]dg-desktop-portal-gtk)$, tag +hyde_com
 windowrule {
     name = hyde_floating_apps
     tag = +hyde_floating_apps
-    match:class = ^(blueman-manager|pavucontrol-qt|com\.gabm\.satty|vlc|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1|console-dropdown)$
+    match:class = ^(blueman-manager|pavucontrol-qt|com\.gabm\.satty|vlc|kvantummanager|qt[56]ct|nwg-(look|displays)|org\.kde\.ark|org\.pulseaudio\.pavucontrol|blueman-manager|nm-(applet|connection-editor)|org\.kde\.polkit-kde-authentication-agent-1|console-dropdown|org\.gnome\.SystemMonitor|org\.gnome\.FileRoller|org\.gnome\.SoundRecorder|[Tt]uned-gui|[Mm]pv|org\.gnome\.Loupe)$
 }
 
 windowrule {
