--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -2,9 +2,19 @@
 #|-/ /-| IDE Configuration File |-/ /-|#
 #|/ /--+-------------------------+/ /--|#
 
+#// ideTheme indicates the current theme in use.
+#// Do NOT update this manually!
+ideTheme="Wallbash-Ivy"
+
+#// plLoader, sets custom placeholder for wallbash/ivy to work with .dcol and .ivy files.
+#// Usage, add plLoader="example|example1|example2" as your custom placeholder.
+#// Now you can use your own custom placeholder only by declaring it on your .dcol or .ivy.
+#// Warning! This may not work for others if placeholder is different from the intended
+plLoader="ivy|wallbash"
+
 #// wallSet; indicates the current-wallpaper is in use. DO NOT UPDATE THIS MANUALLY!
 #// Well you can. :)
-wallSet="/home/iris/Pictures/wallpapers/1_rain_world.png"
+wallSet="/home/iris/.config/ivy-shell/theme/Wallbash-Ivy/wallpapers/1_rain_world.png"
 
 #// set the transition FPS while changing wallpaper.
 wallFramerate=60
@@ -16,15 +26,16 @@ wallTransDuration=0.4
 wallAnimation="any"
 wallAnimationPrevious="outer"
 wallAnimationNext="grow"
+wallAnimationTheme="grow"
 
 # set transition-bezier for swww while changing wallpaper.
 wallTransitionBezier=".43,1.19,1,.4"
 
 #// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
-#// enableWallIde=0, 0 applies the colors determined from wallpaper.
+#// ebableWallIde=0, 0 applies the colors determined from wallpaper.
 #// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
 #// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
-enableWallIde=1
+enableWallIde=0
 
 #// rofiScale, set the scale for rofi. 
 #// Default scalling value is int 10.
@@ -36,7 +47,7 @@ rofiFontScale=10
 
 #// wallDir, sets the user directories scanned for wallpaper. Default to is $XDG_HOME_DIR/Pictures/wallpapers
 #// setting a custom directory for wallDir would result in to cache wallpapers by $XDG_LOCAL_BIN/swwwallcache.sh!
-wallDir="${XDG_HOME_DIR:-$HOME}/Pictures/wallpapers/"
+wallDir="${XDG_CONFIG_HOME:-$HOME/.config}/ivy-shell/theme/Wallbash-Ivy/wallpapers"
 
 #// fetchIconDir, sets the user directories scanned for finding fastfetch icons and randomizes. Default is to $XDG_CONFIG_HOME/fastfetch/icons!
 #// Before using fetchIconDir, be sure to set fetchIcon to empty.
