--- a/Configs/.config/kitty/ivy.conf
+++ b/Configs/.config/kitty/ivy.conf
@@ -7,12 +7,13 @@ include ./theme.conf
 # SHELL
 # ─────────────────────────────────────
 shell fish
-font_family      CaskaydiaCove Nerd Font Mono
+font_family      JetBrainsMono Nerd Font
 font_size 9
 bold_font auto
 italic_font auto
 bold_italic_font auto
 confirm_os_window_close 0
+enable_auto_bell no
 scrollbar_handle_opacity 0
 scrollbar_track_opacity 0
 scrollbar_track_hover_opacity 0
@@ -34,6 +35,7 @@ cursor_blink_interval 0
 background_opacity 0.8
 dynamic_background_opacity 0.8
 background_blur 1
+enable_background_blur yes
 
 # ─────────────────────────────────────
 # MARGINE
@@ -41,5 +43,4 @@ background_blur 1
 window_margin_width 21.75
 initial_window_width 950
 initial_window_height 500
-
 
