Adding Catppuccin-Mocha

--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -13,8 +13,7 @@ ideTheme="Wallbash-Ivy"
 plLoader="ivy|wallbash"
 
 #// wallSet; indicates the current-wallpaper is in use. DO NOT UPDATE THIS MANUALLY!
-#// Well you can. :)
-wallSet="/home/iris/.config/ivy-shell/theme/Wallbash-Ivy/wallpapers/1_rain_world.png"
+wallSet="/home/iris/.config/ivy-shell/theme/Catppuccin-Mocha/wallpapers/1_rain_world.png"
 
 #// set the transition FPS while changing wallpaper.
 wallFramerate=60
@@ -35,35 +34,29 @@ wallTransitionBezier=".43,1.19,1,.4"
 #// ebableWallIde=0, 0 applies the colors determined from wallpaper.
 #// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
 #// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
-enableWallIde=0
+enableWallIde=1
 
 #// rofiScale, set the scale for rofi. 
 #// Default scalling value is int 10.
-rofiScale=10
+rofiScale=9
 
 #// rofiFontScale, set the font scale for rofi. 
 #// Default scalling value is int 10.
 rofiFontScale=10
 
-#// wallDir, sets the user directories scanned for wallpaper. Default to is $XDG_HOME_DIR/Pictures/wallpapers
+#// wallDir, sets the user directories scanned for wallpaper.
+#// WallAddCustomPath, sets a custom user directories scanned for wallpapers.
 #// setting a custom directory for wallDir would result in to cache wallpapers by $XDG_LOCAL_BIN/swwwallcache.sh!
-wallDir="${XDG_CONFIG_HOME:-$HOME/.config}/ivy-shell/theme/Wallbash-Ivy/wallpapers"
+# WallAddCustomPath=()
+wallDir="${XDG_CONFIG_HOME:-$HOME/.config}/ivy-shell/theme/Catppuccin-Mocha/wallpapers"
 
-#// fetchIconDir, sets the user directories scanned for finding fastfetch icons and randomizes. Default is to $XDG_CONFIG_HOME/fastfetch/icons!
-#// Before using fetchIconDir, be sure to set fetchIcon to empty.
-#// To empty fetchIcon, use the exclusion variable provided below to unset.
-#// and fetchIconDir would default to $XDG_CONFIG_HOME/fastfetch/icons.
-fetchIconDir="${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/icons"
-
-#// fetchIcon, sets the icon specified by the user! Needed paths to force icon! Default is to none.
-#// Before using fetchIcon, be sure to set fetchIconDir empty..
-#// To empty out fetchIcon and exclusion it. Use exclusion variable provided below.
-fetchIcon=""
+#// fetchIcon, sets the user directories scanned for finding fastfetch icons and randomizes. Default is to $XDG_CONFIG_HOME/fastfetch/icons!
+fetchIcon="${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/icons"
 
 #// Exclusion, add exclusion to a variable that needs to be unset. Avoids conflicting variable and secures purity of globalcontrol.sh.
 #// Makes the variable local only for ide.conf.
 #// add the exclusions to unset the variable. 
 #// Do not let exclusion be defined empty. This will unload all the variable and immediately fail!
 #// If an exclusion is declared, it would still be set to empty.
-#exclusion="()"
+# exclusion="()"
 
