Including rofilauncher.sh to hot-reload dynamically with themes, includes others.

--- a/Configs/.config/hypr/hyprland/define-app.conf
+++ b/Configs/.config/hypr/hyprland/define-app.conf
@@ -3,7 +3,7 @@
 # ─────────────────────────────────────
 $terminal = kitty
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = $scrDir/rofilauncher.sh 
 $select-menu = $scrDir/style-launcher.sh
 $toggle-bar = $hyprscrDir/toggle-waybar.sh
 $select-wallpapermenu = $scrDir/wbselecgen.sh
