--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -47,6 +47,9 @@ bind = $mainMod+Shift, F, fullscreen, 0 # Fullscreen
 bind = $mainMod+Alt, up, exec, $scrDir/wbsecrandom.sh -n
 bind = $mainMod+Alt, down, exec, $scrDir/wbsecrandom.sh -p
 
+# Switch Themes
+bind = $mainMod+Shift, right, exec, $scrDir/themeswitch.sh -n
+bind = $mainMod+Shift, left, exec, $scrDir/themeswitch.sh -p
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
