--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -2,9 +2,17 @@
 #|-/ /-| IDE Configuration File |-/ /-|#
 #|/ /--+-------------------------+/ /--|#
 
+
+# ▀█▀ █░█ █▀▀ █▀▄▀█ █▀▀
+# ░█░ █▀█ ██▄ █░▀░█ ██▄
+
 #// ideTheme indicates the current theme in use.
-#// Do NOT update this manually!
+#// Do NOT update this manually! This is updated by scripts.
 ideTheme="Wallbash-Ivy"
+
+
+# █░█░█ ▄▀█ █░░ █░░ █▄▄ ▄▀█ █▀ █░█
+# ▀▄▀▄▀ █▀█ █▄▄ █▄▄ █▄█ █▀█ ▄█ █▀█
 
 #// plLoader, sets custom placeholder for wallbash/ivy to work with .dcol and .ivy files.
 #// Usage, add plLoader="example|example1|example2" as your custom placeholder.
@@ -12,17 +20,39 @@ ideTheme="Wallbash-Ivy"
 #// Warning! This may not work for others if placeholder is different from the intended
 plLoader="ivy|wallbash"
 
+#// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
+#// ebableWallIde=0, 0 applies the colors determined from wallpaper.
+#// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
+#// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
+enableWallIde=0
+
+#// skipTemplate, specifies .ivy or .dcol template that should be excluded or skipped from procesing!
+#// This allows you to selectively exclude certain template that exists in ${ideDir} while still processing others.
+#// example:
+#// skipTemplate=(
+#//     "{ideDir}/theme/Wallbash-Ivy/rofi.ivy"
+#//     "${ideDir}/main/ivybash/gtk.ivy"
+#// )
+
+#// nProcCount, lets wallbash use the maximum or limited CPU utilization to process templates!
+#// You can limit the core utilization by declaring the number of cores to be utilized.
+#// Defaulted is '3', but $(nproc) can be used here. e.g., nProcCount=$(nproc).
+nProcCount=3
+
+# █░█░█ ▄▀█ █░░ █░░ █▀█ ▄▀█ █▀█ █▀▀ █▀█
+# ▀▄▀▄▀ █▀█ █▄▄ █▄▄ █▀▀ █▀█ █▀▀ ██▄ █▀▄
+
 #// wallSet; indicates the current-wallpaper is in use. DO NOT UPDATE THIS MANUALLY!
 wallSet="/home/iris/.config/ivy-shell/theme/Catppuccin-Mocha/wallpapers/1_rain_world.png"
 
 #// set the transition FPS while changing wallpaper.
 wallFramerate=60
 
-#// set the transition duration for swww while changing wallpaper. 
+#// set the transition duration for swww while changing wallpaper.
 wallTransDuration=0.5
 
-# set animation for swww while changing wallpaper.
-wallAnimation="any"
+#// set animation for swww while changing wallpaper.
+wallAnimation="grow"
 wallAnimationPrevious="outer"
 wallAnimationNext="grow"
 wallAnimationTheme="grow"
@@ -30,33 +60,65 @@ wallAnimationTheme="grow"
 # set transition-bezier for swww while changing wallpaper.
 wallTransitionBezier=".43,1.19,1,.4"
 
-#// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
-#// ebableWallIde=0, 0 applies the colors determined from wallpaper.
-#// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
-#// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
-enableWallIde=0
-
-#// rofiScale, set the scale for rofi. 
-#// Default scalling value is int 10.
-rofiScale=9
-
-#// rofiFontScale, set the font scale for rofi. 
-#// Default scalling value is int 10.
-rofiFontScale=10
+#// set transiion-step to determine the frames to be loaded. We will be calculating the steps to be taken.
+#// This can also be set manually!
+wallTransitionStep=$(awk "BEGIN {printf \"%d\", (${wallTransDuration} * ${wallFramerate}) + 31}")
 
 #// wallDir, sets the user directories scanned for wallpaper.
-#// WallAddCustomPath, sets a custom user directories scanned for wallpapers.
-#// setting a custom directory for wallDir would result in to cache wallpapers by $XDG_LOCAL_BIN/swwwallcache.sh!
-# WallAddCustomPath=()
+#// DO NOT EDIT THIS MANUALLY UNLESS YOU KNOW WHAT YOU ARE DOING!
 wallDir="${XDG_CONFIG_HOME:-$HOME/.config}/ivy-shell/theme/Catppuccin-Mocha/wallpapers"
+
+#// WallAddCustomPath, sets a custom user directories scanned for wallpapers.
+#// add your wallpaper directories as - WallAddCustomPath=("/path/to/wall/dir1" "/path/to/wall/dir2")
+#// setting a custom directory for wallDir would result in to cache wallpapers by $XDG_LOCAL_BIN/swwwallcache.sh!
+#// example:
+#// WallAddCustomPath=(
+#//       "${homDir}/Pictures/wallpapers"
+#//       "${homDir}/Pictures/wallDir"
+#// )
+
+# █▀█ █▀█ █▀▀ █
+# █▀▄ █▄█ █▀░ █
+
+#// rofiScale, set the scale for rofi. Default scalling value is int 10.
+rofiScale=9
+
+#// rofiStyle, sets the style for rofi. Can be manually edited or updated via style-launcher.sh.
+rofiStyle=1
+#// rofiColCount=4
+
+# █▀▀ ▄▀█ █▀ ▀█▀ █▀▀ █▀▀ ▀█▀ █▀ █░█
+# █▀░ █▀█ ▄█ ░█░ █▀░ ██▄ ░█░ █▄ █▀█
 
 #// fetchIcon, sets the user directories scanned for finding fastfetch icons and randomizes. Default is to $XDG_CONFIG_HOME/fastfetch/icons!
 fetchIcon="${XDG_CONFIG_HOME:-$HOME/.config}/fastfetch/icons"
 
+# █▄▄ █▀█ █ █▀  █░█ ▀█▀ █▄░█ █▀▀ █▀ █▀ █▀ ▀█▀ █░░ 
+# █▄█ █▀▄ █ █▄█ █▀█ ░█░ █░▀█ ██▄ ▄█ ▄█ █▄ ░█░ █▄▄
+
+#// brightnesscontrol.sh configuration, declarable according to user preference.
+#// brightnessIconDir is string-type variable that needs directory for dunst to use icons.
+#// brightnessStep is integer-type variable that is determined through 0 (true) and 1 (False).
+#// brightnessNotify is integer-type, determined of 0 and 1.
+brightnessIconDir="${confDir}/dunst/icons/vol"
+#// brightnessStep=5
+#// brightnessNotify=0
+
+# █░█ █▀█ █░░ █░█ █▀▄▀█ █▀▀ █▀ ▀█▀ █░░ 
+# ▀▄▀ █▄█ █▄▄ █▄█ █░▀░█ ██▄ █▄ ░█░ █▄▄
+
+#// voluemcontrol.sh configuration, declarable according to user preference.
+#// volumeStep is an integer-type variable to determine the steps. For example, volumeStep is defaultly set to 5.
+#// volumeNotifyUpdateLevel & volumeNotifyMute, is an integer-type variable that suppress Notification-Popups determined through 0 (true) or {1 or greater (false)}.
+volumeIconDir="${confDir}/dunst/icons/vol"
+#// volumeStep=5
+#// volumeNotifyUpdateLevel=0
+#// volumeNotifyMute=0
+
 #// Exclusion, add exclusion to a variable that needs to be unset. Avoids conflicting variable and secures purity of globalcontrol.sh.
 #// Makes the variable local only for ide.conf.
-#// add the exclusions to unset the variable. 
+#// add the exclusions to unset the variable.
 #// Do not let exclusion be defined empty. This will unload all the variable and immediately fail!
 #// If an exclusion is declared, it would still be set to empty.
-# exclusion="()"
+#// exclusion="()"
 
