--- a/Configs/.config/hypr/hyprland/keybinds.conf
+++ b/Configs/.config/hypr/hyprland/keybinds.conf
@@ -19,13 +19,7 @@ bind = $mainMod+Shift, D, exec, pkill -x rofi || $select-menu #Toggle Rofi Selec
 bind = $mainMod, V, exec, pkill -x rofi || $scrDir/wl-clipmanager.sh
 bind = $mainMod+Ctrl, R, exec, $toggle-bar #Waybar Reload
 bind = $mainMod+Shift, Y, exec, pkill -x rofi || $scrDir/WaybarLayout.sh #Toggle Waybar Layout
-bind = $mainMod+Shift, W, exec, pkill -x rofi || $select-wallpapermenu #Toggle Wallpaper Menu
-bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
 bind = $mainMod+Alt, S, exec, pkill -x rofi || $scrDir/sddm-style.sh #Toggle SDDM Style
-bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrDir/lumine-switch.sh
-bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrDir/themeswitch.sh
-# Swaync-Bindings:
-bind = $mainMod, N, exec, swaync-client -t -sw #Toggle Swaync Notication bar
 
 # Screenshot-Bindings:
 bind = $mainMod, Print, exec, $scrDir/wl-screenshot.sh --now
@@ -43,13 +37,16 @@ bind = $mainMod, J, togglesplit, # Toggle Split
 bind = $mainMod, F, fullscreen, 1 # Maximize
 bind = $mainMod+Shift, F, fullscreen, 0 # Fullscreen
 
-# Switch Wallpapers
-bind = $mainMod+Alt, up, exec, $scrDir/wbsecrandom.sh -n
-bind = $mainMod+Alt, down, exec, $scrDir/wbsecrandom.sh -p
-
-# Switch Themes
+# Theme Related:
+bind = $mainMod+Shift, W, exec, pkill -x rofi || $select-wallpapermenu #Toggle Wallpaper Menu
+bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrDir/lumine-switch.sh
+bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrDir/themeswitch.sh
+bind = $mainMod+Alt, T, exec, $random-wallpaper #Toggle Random Wallpaper
+bind = $mainMod+Alt, up, exec, $scrDir/wbselecgen.sh -n # Next Wallpaper
+bind = $mainMod+Alt, down, exec, $scrDir/wbselecgen.sh -p # Previous wallpaper
 bind = $mainMod+Shift, right, exec, $scrDir/themeswitch.sh -n
 bind = $mainMod+Shift, left, exec, $scrDir/themeswitch.sh -p
+
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
@@ -117,4 +114,3 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
