Modify rofiStyle and add themeRofiStyle
Updated rofiStyle to 11 and added themeRofiStyle setting.

--- a/Configs/.config/ivy-shell/ide.conf
+++ b/Configs/.config/ivy-shell/ide.conf
@@ -21,7 +21,7 @@ ideTheme="Wallbash-Ivy"
 plLoader="ivy|wallbash"
 
 #// enableWallIde to determine the color deployed by Wallbash/Ivy-shell. DO NOT UPDATE THIS MANUALLY! Use $XDG_LOCAL_BIN/lumine-switch.sh
-#// ebableWallIde=0, 0 applies the colors determined from wallpaper.
+#// enableWallIde=0, 0 applies the colors determined from wallpaper.
 #// enableWallIde=1, 1 applies dark colors determined from dark/light wallpaper. Forces dark color for light wallpaper.
 #// enableWallIde=2, 2 applies light colors determind from dark/light wallpaper. Forces light color for dark wallpaper.
 enableWallIde=0
@@ -84,7 +84,11 @@ wallDir="${XDG_CONFIG_HOME:-$HOME/.config}/ivy-shell/theme/Catppuccin-Mocha/wall
 rofiScale=9
 
 #// rofiStyle, sets the style for rofi. Can be manually edited or updated via style-launcher.sh.
-rofiStyle=1
+rofiStyle=11
+
+#// themeRofiStyle, sets the style for $XDG_LOCAL_DIR/themeswitch.sh! Available option: 1, 2.
+themeRofiStyle=1
+
 #// rofiColCount=4
 
 # █▀▀ ▄▀█ █▀ ▀█▀ █▀▀ █▀▀ ▀█▀ █▀ █░█
